# utopia

./: .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE.txt  README.md  check-all.py  check-header.py  commitlint.config.js  config.hpp  fix-format.py  package-lock.json  package.json  release.ts  tsconfig.json
.github/workflows/: build-and-test.yaml  update_badge.yaml
assert/: .gitignore  download.py
cmake/: base.cmake  checker.cmake  config.cmake  define.cmake  import-library.cmake  install.cmake  library.cmake  options.cmake
script/: pwsh.ps1
utopia-client/: CMakeLists.txt
utopia-client/src/: main.cpp
utopia-core/: CMakeLists.txt
utopia-core/include/utopia/: abort.hpp  constexpr.hpp  entity.hpp  exception.hpp  guuid.hpp  hasher.hpp  init.hpp  iostream.hpp  resource.hpp  scope_guard.hpp  serializable.hpp  source_location.hpp  stream.hpp  template.hpp  world.hpp
utopia-core/src/: abort.cpp  iostream.cpp
utopia-core/test/: guuid.cpp  main.cpp  stream.cpp
utopia-server/: CMakeLists.txt
utopia-server/src/: main.cpp
